force-app/main/default/objects/Case/fields/AprovouCampanha__c.field-meta.xml
<CustomField>
    <fullName>AprovouCampanha__c</fullName>
    <label>Aprovou Campanha</label>
    <type>Date</type>
</CustomField>