force-app/main/default/objects/Case/fields/AprovouRoteiro__c.field-meta.xml
<CustomField>
    <fullName>AprovouRoteiro__c</fullName>
    <label>Aprovou Roteiro</label>
    <type>Date</type>
</CustomField>