force-app/main/default/objects/Case/fields/Atendente__c.field-meta.xml
<CustomField>
    <fullName>Atendente__c</fullName>
    <label>Atendente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>