force-app/main/default/objects/Case/fields/CelebridadeAprovou__c.field-meta.xml
<CustomField>
    <fullName>CelebridadeAprovou__c</fullName>
    <label>Celebridade Aprovou</label>
    <type>Date</type>
</CustomField>