force-app/main/default/objects/Case/fields/CelebridadePreAprovado__c.field-meta.xml
<CustomField>
    <fullName>CelebridadePreAprovado__c</fullName>
    <label>Celebridade Pré-Aprovado</label>
    <type>Date</type>
</CustomField>