force-app/main/default/objects/Case/fields/ClientsObjectiveWithAcelerai__c.field-meta.xml
<CustomField>
    <fullName>ClientsObjectiveWithAcelerai__c</fullName>
    <label>Objetivo do Cliente com o Aceleraí</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campanha Institucional</fullName>
            </value>
            <value>
                <fullName>Campanha Sazonal</fullName>
            </value>
            <value>
                <fullName>Campanha Promocional</fullName>
            </value>
            <value>
                <fullName>Campanha de Lançamento</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
                <isActive>false</isActive>
                <label>RD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>