force-app/main/default/objects/Case/fields/EntregaRoteiro__c.field-meta.xml
<CustomField>
    <fullName>EntregaRoteiro__c</fullName>
    <label>Entrega Roteiro</label>
    <type>Date</type>
</CustomField>