force-app/main/default/objects/Case/fields/Finalizado__c.field-meta.xml
<CustomField>
    <fullName>Finalizado__c</fullName>
    <label>Finalizado</label>
    <type>Date</type>
</CustomField>