force-app/main/default/objects/Case/fields/FinalizouFormulario__c.field-meta.xml
<CustomField>
    <fullName>FinalizouFormulario__c</fullName>
    <label>Finalizou Formulário</label>
    <type>Date</type>
</CustomField>