force-app/main/default/objects/Case/fields/Id_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Id_da_Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade Nome</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>