force-app/main/default/objects/Case/fields/Link_Oportunidade_SGC__c.field-meta.xml
<CustomField>
    <fullName>Link_Oportunidade_SGC__c</fullName>
    <description>Campo carrega URL da oportunidade do SGC</description>
    <inlineHelpText>Campo carrega URL da oportunidade do SGC</inlineHelpText>
    <label>Link Oportunidade SGC</label>
    <type>Url</type>
</CustomField>