force-app/main/default/objects/Case/fields/NumberEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberEmployees__c</fullName>
    <label>Quantidade de Funcionários?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - 05</fullName>
            </value>
            <value>
                <fullName>05 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>Mais de 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>