force-app/main/default/objects/Case/fields/PrimeiroAcesso__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroAcesso__c</fullName>
    <label>Primeiro Acesso</label>
    <type>Date</type>
</CustomField>