force-app/main/default/objects/Case/fields/PrimeiroContato__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroContato__c</fullName>
    <label>Primeiro Contato</label>
    <type>Date</type>
</CustomField>