force-app/main/default/objects/Case/fields/StartProducao__c.field-meta.xml
<CustomField>
    <fullName>StartProducao__c</fullName>
    <label>Start Produção</label>
    <type>Date</type>
</CustomField>