force-app/main/default/objects/Case/fields/StateYourCompany__c.field-meta.xml
<CustomField>
    <fullName>StateYourCompany__c</fullName>
    <label>Onde está sediada a sua empresa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UF_BR</valueSetName>
    </valueSet>
</CustomField>