force-app/main/default/objects/Case/fields/WhatsYourInstagram__c.field-meta.xml
<CustomField>
    <fullName>WhatsYourInstagram__c</fullName>
    <inlineHelpText>@username</inlineHelpText>
    <label>Qual seu instagram?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>