force-app/main/default/objects/Case/fields/WhatsYourRole__c.field-meta.xml
<CustomField>
    <fullName>WhatsYourRole__c</fullName>
    <label>Qual seu cargo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fundador/Sócio</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Coordenador</fullName>
            </value>
            <value>
                <fullName>Analista</fullName>
            </value>
            <value>
                <fullName>Estagiário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>