force-app/main/default/objects/Case/recordTypes/Prodution2.recordType-meta.xml
<RecordType>
    <fullName>Prodution2</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Produção 2</label>
</RecordType>