force-app/main/default/objects/Case/listViews/Production_Case.listView-meta.xml
<ListView>
    <fullName>Production_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Produção</label>
    <queue>Production</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>